--- a/publication.html
+++ b/publication.html
@@ -12,11 +12,11 @@
 <tr valign="top">
 <td id="layout-menu">
 <div class="menu-category">Homepage</div>
-<div class="menu-item"><a href="index.html" class="current">Home</a></div>
+<div class="menu-item"><a href="index.html">Home</a></div>
 <div class="menu-item"><a href="publication.html">Publication</a></div>
 </td>
 <td id="layout-content">
-<p>hello world</p>
+<p>hahahah</p>
 <div id="footer">
 <div id="footer-text">
 Page generated 2020-05-26 16:26:07 China Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
