--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <table summary="Table for page layout." id="tlayout">
 <tr valign="top">
 <td id="layout-menu">
-<div class="menu-category">Homepage</div>
+<div class="menu-category">Menu</div>
 <div class="menu-item"><a href="index.html" class="current">Home</a></div>
-<div class="menu-item"><a href="publication.html">Publication</a></div>
+<div class="menu-item"><a href="publication.html">Publications</a></div>
 </td>
 <td id="layout-content">
 <div id="toptitle">
@@ -21,11 +21,39 @@
 </div>
 <table class="imgtable"><tr><td>
 <img src="pb_in_red.jpg" alt="Bo Pang" width="250px" height="250px" />&nbsp;</td>
-<td align="left"><p>Ordinary jemdoc markup goes here.</p>
+<td align="left"><p>Ph.D. Candidate <br />
+<a href="https://engineering.nyu.edu/academics/departments/electrical-and-computer-engineering">Department of Electrical and Computer Engineering</a><br />
+<a href="www.nyu.edu">New York University</a><br />
+370 Jay street, Brooklyn, NY, USA<br />
+Email: <i>bo.pang</i> at <i>nyu</i> dot <i>edu</i></p>
 </td></tr></table>
+<h2>About me</h2>
+<p>I am a Ph.D. candidate at <a href="www.nyu.edu">New York University</a>, working with my supervisor <a href="https://engineering.nyu.edu/faculty/zhong-ping-jiang">Prof. Zhong-ping Jiang</a>. I received my Master's degree in Automation from <a href="http://en.sjtu.edu.cn/">Shanghai Jiao Tong University</a>, Shanghai, China, where I was advised by <a href="http://www.automation.sjtu.edu.cn/wdzhang/">Prof. Weidong Zhang</a>. Before that, I received my B.S. degree in Automation from <a href="https://ev.buaa.edu.cn/">Beihang University</a></p>
+<p>My research focuses on decision making under uncertainty, includes but not limited to reinforcement learning, adaptive/approximate dynamic programming, optimal control, stochastic control, model predictive control.</p>
+<h2>Education</h2>
+<ul>
+<li><p>Ph.D. Student in Electrical and Computer Engineering, New York University, September 2017 &ndash; Present</p>
+</li>
+<li><p>M.S. in Automation, Shanghai Jiao Tong University, September 2014 &ndash; March 2017</p>
+</li>
+<li><p>B.S. in Automation, Beihang University, September 2010 &ndash; June 2014</p>
+</li>
+</ul>
+<h2>Recent News</h2>
+<div class="infoblock">
+<div class="blockcontent">
+<ul>
+<li><p><b>May 20th</b> One paper on policy iteration for LQR of linear periodic systems was <a href="https://www.sciencedirect.com/science/article/pii/S0005109820302338">online</a> in <a href="https://www.journals.elsevier.com/automatica">Automatica</a>.</p>
+</li>
+<li><p><b>May 19th</b> Our <a href="https://arxiv.org/abs/2005.09528">paper</a> on robust analysis of policy iteration for LQR was submitted to <a href="http://ieeecss.org/publication/transactions-automatic-control">IEEE transactions on Automatic Control</a>.</p>
+</li>
+<li><p><b>April 16th</b> One paper on value iteration for LQR of linear periodic systems was <a href="https://www.sciencedirect.com/science/article/pii/S0005109820302338">online</a> in <a href="http://ieeecss.org/publication/transactions-automatic-control">IEEE transactions on Automatic Control</a>.</p>
+</li>
+</ul>
+</div></div>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-05-26 17:04:35 China Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2020-05-26 20:21:50 China Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
