--- a/publication.html
+++ b/publication.html
@@ -20,7 +20,7 @@
 <h1>Publications</h1>
 </div>
 <h2>Papers in Preparation</h2>
-<p><i>Robust Policy Iteration for Continuous-time Linear Quadratic Regulation.</i> [<a href="https://doi.org/10.1016/j.automatica.2020.109035">Link</a>]<br />
+<p><i>Robust Policy Iteration for Continuous-time Linear Quadratic Regulation.</i> [<a href="https://arxiv.org/abs/2005.09528">arXiv</a>]<br />
 <b>Bo Pang</b>, Tao Bian, Zhong-Ping Jiang.<br />
 IEEE Transactions on Automatic Control, Under Review</p>
 <p><i>A Data-driven Approach for Constrained Infinite-Horizon Linear Quadratic Regulation.</i> <br />
@@ -33,16 +33,16 @@ Automatica, Vol. 118, 2020</p>
 <p><i>Adaptive Optimal Control of Linear Periodic Systems: An Off-Policy Value Iteration Approach.</i> [<a href="https://doi.org/10.1109/TAC.2020.2987313">Link</a>]<br />
 <b>Bo Pang</b>, Zhong-Ping Jiang.<br />
 IEEE Transactions on Automatic Control, Early Access, 2020</p>
-<p><i>Adaptive dynamic programming for finite-horizon optimal control of linear time-varying discrete-time systems.</i> [<a href="https://doi.org/10.1007/s11768-019-8168-8">Link</a>]<br />
+<p><i>Adaptive Dynamic Programming for Finite-horizon Optimal Control of Linear Time-varying Discrete-time Systems.</i> [<a href="https://doi.org/10.1007/s11768-019-8168-8">Link</a>]<br />
 <b>Bo Pang</b>, Tao Bian, Zhong-Ping Jiang.<br />
 Control Theory and Technology, Vol. 17, No. 1, pp. 73&ndash;84, 2019</p>
-<p><i>ThermalNet: A deep reinforcement learning-based combustion optimization system for coal-fired boiler.</i> [<a href="https://doi.org/10.1016/j.engappai.2018.07.003">Link</a>]<br />
+<p><i>ThermalNet: A Deep Reinforcement Learning-based Combustion Optimization System for Coal-fired Boiler.</i> [<a href="https://doi.org/10.1016/j.engappai.2018.07.003">Link</a>]<br />
 Yin Cheng, Yuexin Huang, <b>Bo Pang</b>, Weidong Zhang.<br />
 Engineering Applicaitons of Artificial Intelligence, Vol. 74, pp. 303&ndash;311, 2018</p>
 <p><i>LMI Relaxations for Quadratic Stabilization of Guaranteed Cost Control of T–S Fuzzy Systems.</i> [<a href="https://doi.org/10.1007/s40815-016-0268-8">Link</a>]<br />
 <b>Bo Pang</b>, Yunze Cai, Weidong Zhang.<br />
 International Journal of Fuzzy Systems, Vol. 19, No. 5, pp. 1392&ndash;1405, 2017</p>
-<p><i>Exponentially stable guaranteed cost control for continuous and discrete-time Takagi–Sugeno fuzzy systems.</i> [<a href="https://doi.org/10.1016/j.neucom.2016.04.041">Link</a>]<br />
+<p><i>Exponentially Stable Guaranteed Cost Control for Continuous and Discrete-time Takagi–Sugeno Fuzzy Systems.</i> [<a href="https://doi.org/10.1016/j.neucom.2016.04.041">Link</a>]<br />
 <b>Bo Pang</b>, Xiaocheng Liu, Qibing Jin, Weidong Zhang.<br />
 Neurocomputing, Vol. 205, pp. 210&ndash;221, 2016</p>
 <h2>Conference Papers</h2>
@@ -52,15 +52,15 @@ Neurocomputing, Vol. 205, pp. 210&ndash;221, 2016</p>
 <p><i>Data-driven Finite-horizon Optimal Control for Linear Time-varying Discrete-time Systems.</i> [<a href="https://doi.org/10.1109/CDC.2018.8619347">Link</a>]<br />
 <b>Bo Pang</b>, Tao Bian, Zhong-Ping Jiang.<br />
 2018 IEEE 57th Conference on Decision and Control (CDC), pp. 861&ndash;866, Miami Beach, FL, USA.</p>
-<p><i>Output tracking of boiler-turbine system by fuzzy guaranteed cost control.</i> [<a href="https://doi.org/10.1109/ChiCC.2016.7553933">Link</a>]<br />
+<p><i>Output Tracking of Boiler-turbine System by Fuzzy Guaranteed Cost Control.</i> [<a href="https://doi.org/10.1109/ChiCC.2016.7553933">Link</a>]<br />
 <b>Bo Pang</b>, Yadong Zhao, Bowen Yi, Liyue Chen, Weidong Zhang.<br />
 2016 35th Chinese Control Conference (CCC), pp. 3721&ndash;3726, Chengdu, China.</p>
-<p><i>Finite-time distributed observers for position and velocity estimation in vehicle formations.</i> [<a href="https://doi.org/10.1109/ChiCC.2016.7554561">Link</a>]<br />
+<p><i>Finite-time Distributed Observers for Position and Velocity Estimation in Vehicle Formations.</i> [<a href="https://doi.org/10.1109/ChiCC.2016.7554561">Link</a>]<br />
 Yadong Zhao, <b>Bo Pang</b>, Fei Ye, Weidong Zhang.<br />
 2016 35th Chinese Control Conference (CCC), pp. 7598&ndash;7603, Chengdu, China.</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-05-26 20:21:50 China Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2020-05-26 20:45:00 China Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
