--- a/index.html
+++ b/index.html
@@ -23,20 +23,20 @@
 <img src="pb_in_red.jpg" alt="Bo Pang" width="250px" height="250px" />&nbsp;</td>
 <td align="left"><p>Ph.D. Candidate <br />
 <a href="https://engineering.nyu.edu/academics/departments/electrical-and-computer-engineering">Department of Electrical and Computer Engineering</a><br />
-<a href="www.nyu.edu">New York University</a><br />
+<a href="nyu.edu">New York University</a><br />
 370 Jay street, Brooklyn, NY, USA<br />
 Email: <i>bo.pang</i> at <i>nyu</i> dot <i>edu</i></p>
 </td></tr></table>
 <h2>About me</h2>
-<p>I am a Ph.D. candidate at <a href="www.nyu.edu">New York University</a>, working with my supervisor <a href="https://engineering.nyu.edu/faculty/zhong-ping-jiang">Prof. Zhong-ping Jiang</a>. I received my Master's degree in Automation from <a href="http://en.sjtu.edu.cn/">Shanghai Jiao Tong University</a>, Shanghai, China, where I was advised by <a href="http://www.automation.sjtu.edu.cn/wdzhang/">Prof. Weidong Zhang</a>. Before that, I received my B.S. degree in Automation from <a href="https://ev.buaa.edu.cn/">Beihang University</a></p>
+<p>I am a Ph.D. candidate at <a href="www.nyu.edu">New York University</a>, working with my supervisor <a href="https://engineering.nyu.edu/faculty/zhong-ping-jiang">Prof. Zhong-ping Jiang</a>. I received my Master's degree in Automation from <a href="http://en.sjtu.edu.cn/">Shanghai Jiao Tong University</a>, Shanghai, China, where I was advised by <a href="http://www.automation.sjtu.edu.cn/wdzhang/">Prof. Weidong Zhang</a>. Before that, I received my B.S. degree in Automation from <a href="https://ev.buaa.edu.cn/">Beihang University</a>.</p>
 <p>My research focuses on decision making under uncertainty, includes but not limited to reinforcement learning, adaptive/approximate dynamic programming, optimal control, stochastic control, model predictive control.</p>
 <h2>Education</h2>
 <ul>
-<li><p>Ph.D. Student in Electrical and Computer Engineering, New York University, September 2017 &ndash; Present</p>
+<li><p>Ph.D. Student in Electrical and Computer Engineering, New York University, September 2017 &ndash; Present.</p>
 </li>
-<li><p>M.S. in Automation, Shanghai Jiao Tong University, September 2014 &ndash; March 2017</p>
+<li><p>M.S. in Automation, Shanghai Jiao Tong University, September 2014 &ndash; March 2017.</p>
 </li>
-<li><p>B.S. in Automation, Beihang University, September 2010 &ndash; June 2014</p>
+<li><p>B.S. in Automation, Beihang University, September 2010 &ndash; June 2014.</p>
 </li>
 </ul>
 <h2>Recent News</h2>
@@ -53,7 +53,7 @@ Email: <i>bo.pang</i> at <i>nyu</i> dot <i>edu</i></p>
 </div></div>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-05-26 20:21:50 China Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2020-05-26 20:45:00 China Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
