--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
 <img src="pb_in_red.jpg" alt="Bo Pang" width="250px" height="250px" />&nbsp;</td>
 <td align="left"><p>Ph.D. Candidate <br />
 <a href="https://engineering.nyu.edu/academics/departments/electrical-and-computer-engineering">Department of Electrical and Computer Engineering</a><br />
-<a href="nyu.edu">New York University</a><br />
+<a href="https://www.nyu.edu/">New York University</a><br />
 370 Jay street, Brooklyn, NY, USA<br />
 Email: <i>bo.pang</i> at <i>nyu</i> dot <i>edu</i></p>
 </td></tr></table>
 <h2>About me</h2>
-<p>I am a Ph.D. candidate at <a href="www.nyu.edu">New York University</a>, working with my supervisor <a href="https://engineering.nyu.edu/faculty/zhong-ping-jiang">Prof. Zhong-ping Jiang</a>. I received my Master's degree in Automation from <a href="http://en.sjtu.edu.cn/">Shanghai Jiao Tong University</a>, Shanghai, China, where I was advised by <a href="http://www.automation.sjtu.edu.cn/wdzhang/">Prof. Weidong Zhang</a>. Before that, I received my B.S. degree in Automation from <a href="https://ev.buaa.edu.cn/">Beihang University</a>.</p>
+<p>I am a Ph.D. candidate at <a href="https://www.nyu.edu/">New York University</a>, working with my supervisor <a href="https://engineering.nyu.edu/faculty/zhong-ping-jiang">Prof. Zhong-ping Jiang</a>. I received my Master's degree in Automation from <a href="http://en.sjtu.edu.cn/">Shanghai Jiao Tong University</a>, Shanghai, China, where I was advised by <a href="http://www.automation.sjtu.edu.cn/wdzhang/">Prof. Weidong Zhang</a>. Before that, I received my B.S. degree in Automation from <a href="https://ev.buaa.edu.cn/">Beihang University</a>.</p>
 <p>My research focuses on decision making under uncertainty, includes but not limited to reinforcement learning, adaptive/approximate dynamic programming, optimal control, stochastic control, model predictive control.</p>
 <h2>Education</h2>
 <ul>
@@ -47,13 +47,13 @@ Email: <i>bo.pang</i> at <i>nyu</i> dot <i>edu</i></p>
 </li>
 <li><p><b>May 19th</b> Our <a href="https://arxiv.org/abs/2005.09528">paper</a> on robust analysis of policy iteration for LQR was submitted to <a href="http://ieeecss.org/publication/transactions-automatic-control">IEEE transactions on Automatic Control</a>.</p>
 </li>
-<li><p><b>April 16th</b> One paper on value iteration for LQR of linear periodic systems was <a href="https://www.sciencedirect.com/science/article/pii/S0005109820302338">online</a> in <a href="http://ieeecss.org/publication/transactions-automatic-control">IEEE transactions on Automatic Control</a>.</p>
+<li><p><b>April 16th</b> One paper on value iteration for LQR of linear periodic systems was <a href="https://doi.org/10.1109/TAC.2020.2987313">online</a> in <a href="http://ieeecss.org/publication/transactions-automatic-control">IEEE transactions on Automatic Control</a>.</p>
 </li>
 </ul>
 </div></div>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-05-26 20:45:00 China Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2020-05-26 20:52:29 China Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
