--- a/index.html
+++ b/index.html
@@ -51,9 +51,16 @@ Email: <i>bo.pang</i> at <i>nyu</i> dot <i>edu</i></p>
 </li>
 </ul>
 </div></div>
+<h2>Visitor Flag Counter</h2>
+<p>This counter is set up for curiosity, starting from May 26th, 2020.</p>
+<div class="infoblock">
+<div class="blockcontent">
+<p>{}{raw}
+&lt;a href=&ldquo;https:<i></i>info.flagcounter.com<i>ZvIV&rdquo;&gt;&lt;img src=&ldquo;https:</i><i>s01.flagcounter.com</i>count2<i>ZvIV</i>bg_C2FFFB<i>txt_000000</i>border_CCCCCC<i>columns_8</i>maxflags_20<i>viewers_0</i>labels_1<i>pageviews_1</i>flags_0<i>percent_0</i>&rdquo; alt=&ldquo;Flag Counter&rdquo; border=&ldquo;0&rdquo;&gt;&lt;/a&gt;</p>
+</div></div>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-05-26 20:52:29 China Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2020-05-26 23:47:22 China Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
