--- a/index.html
+++ b/index.html
@@ -52,15 +52,11 @@ Email: <i>bo.pang</i> at <i>nyu</i> dot <i>edu</i></p>
 </ul>
 </div></div>
 <h2>Visitor Flag Counter</h2>
-<p>This counter is set up for curiosity, starting from May 26th, 2020.</p>
-<div class="infoblock">
-<div class="blockcontent">
-<p>{}{raw}
-&lt;a href=&ldquo;https:<i></i>info.flagcounter.com<i>ZvIV&rdquo;&gt;&lt;img src=&ldquo;https:</i><i>s01.flagcounter.com</i>count2<i>ZvIV</i>bg_C2FFFB<i>txt_000000</i>border_CCCCCC<i>columns_8</i>maxflags_20<i>viewers_0</i>labels_1<i>pageviews_1</i>flags_0<i>percent_0</i>&rdquo; alt=&ldquo;Flag Counter&rdquo; border=&ldquo;0&rdquo;&gt;&lt;/a&gt;</p>
-</div></div>
+<p>This counter is set up for curiosity, starting from May 27th, 2020.</p>
+<p><a href="https://info.flagcounter.com/vt4v"><img src="https://s05.flagcounter.com/count2/vt4v/bg_FFFFFF/txt_000000/border_CCCCCC/columns_8/maxflags_20/viewers_0/labels_1/pageviews_1/flags_0/percent_0/" alt="Flag Counter" border="0"></a></p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-05-26 23:47:22 China Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2020-05-27 00:13:45 China Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
