--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
 <table summary="Table for page layout." id="tlayout">
 <tr valign="top">
 <td id="layout-menu">
-<div class="menu-category">Menu</div>
+<div class="menu-category">Main</div>
 <div class="menu-item"><a href="index.html" class="current">Home</a></div>
 <div class="menu-item"><a href="publication.html">Publications</a></div>
+<div class="menu-item"><a href="services.html">Services</a></div>
 </td>
 <td id="layout-content">
 <div id="toptitle">
@@ -56,7 +57,7 @@ Email: <i>bo.pang</i> [@] <i>nyu</i> [DOT] <i>edu</i></p>
 <p><a href="https://info.flagcounter.com/vt4v"><img src="https://s05.flagcounter.com/count2/vt4v/bg_FFFFFF/txt_000000/border_CCCCCC/columns_8/maxflags_20/viewers_0/labels_1/pageviews_1/flags_0/percent_0/" alt="Flag Counter" border="0"></a></p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-05-27 01:02:01 China Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2020-05-29 02:23:23 China Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
