--- a/publication.html
+++ b/publication.html
@@ -11,9 +11,10 @@
 <table summary="Table for page layout." id="tlayout">
 <tr valign="top">
 <td id="layout-menu">
-<div class="menu-category">Menu</div>
+<div class="menu-category">Main</div>
 <div class="menu-item"><a href="index.html">Home</a></div>
-<div class="menu-item"><a href="publication.html">Publications</a></div>
+<div class="menu-item"><a href="publication.html" class="current">Publications</a></div>
+<div class="menu-item"><a href="services.html">Services</a></div>
 </td>
 <td id="layout-content">
 <div id="toptitle">
@@ -60,7 +61,7 @@ Yadong Zhao, <b>Bo Pang</b>, Fei Ye, Weidong Zhang.<br />
 2016 35th Chinese Control Conference (CCC), pp. 7598&ndash;7603, Chengdu, China.</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-05-27 01:02:01 China Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2020-05-29 02:23:23 China Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
