--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
 <a href="https://engineering.nyu.edu/academics/departments/electrical-and-computer-engineering">Department of Electrical and Computer Engineering</a><br />
 <a href="https://www.nyu.edu/">New York University</a><br />
 370 Jay street, Brooklyn, NY, USA<br />
-Email: <i>bo.pang</i> [@] <i>nyu</i> [DOT] <i>edu</i></p>
+Email: <i>bo.pang</i> [@] <i>nyu</i> [DOT] <i>edu</i><br />
+Follow me on: <a href="https://scholar.google.com/citations?user=KqEVzM4AAAAJ&amp;hl=en&amp;oi=ao">Google Scholar</a>, <a href="https://www.zhihu.com/people/qiu-shui-20-54">Zhihu (知乎)</a></p>
 </td></tr></table>
 <h2>About me</h2>
 <p>I am a Ph.D. candidate at <a href="https://www.nyu.edu/">New York University</a>, working with my supervisor <a href="https://engineering.nyu.edu/faculty/zhong-ping-jiang">Prof. Zhong-ping Jiang</a>. I received my Master's degree in Automation from <a href="http://en.sjtu.edu.cn/">Shanghai Jiao Tong University</a>, Shanghai, China, where I was advised by <a href="http://www.automation.sjtu.edu.cn/wdzhang/">Prof. Weidong Zhang</a>. Before that, I received my B.S. degree in Automation from <a href="https://ev.buaa.edu.cn/">Beihang University</a>.</p>
@@ -57,7 +58,7 @@ Email: <i>bo.pang</i> [@] <i>nyu</i> [DOT] <i>edu</i></p>
 <p><a href="https://info.flagcounter.com/vt4v"><img src="https://s05.flagcounter.com/count2/vt4v/bg_FFFFFF/txt_000000/border_CCCCCC/columns_8/maxflags_20/viewers_0/labels_1/pageviews_1/flags_0/percent_0/" alt="Flag Counter" border="0"></a></p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-05-29 02:23:23 China Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2020-06-06 13:20:33 China Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
