--- a/publication.html
+++ b/publication.html
@@ -25,7 +25,7 @@
 <b>Bo Pang</b>, Tao Bian, Zhong-Ping Jiang.<br />
 IEEE Transactions on Automatic Control, Under Review</p>
 <p><i>A Data-driven Approach for Constrained Infinite-Horizon Linear Quadratic Regulation.</i> <br />
-<b>Bo Pang</b>, Tao Bian, Zhong-Ping Jiang.<br />
+<b>Bo Pang</b>, Zhong-Ping Jiang.<br />
 2019 IEEE 59th Conference on Decision and Control (CDC), Under Review</p>
 <h2>Journal Papers</h2>
 <p><i>Reinforcement Learning for Adaptive Control of Continuous-time Linear Periodic Systems.</i> [<a href="https://doi.org/10.1016/j.automatica.2020.109035">Link</a>]<br />
@@ -61,7 +61,7 @@ Yadong Zhao, <b>Bo Pang</b>, Fei Ye, Weidong Zhang.<br />
 2016 35th Chinese Control Conference (CCC), pp. 7598&ndash;7603, Chengdu, China.</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-06-06 13:20:33 China Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2020-06-06 13:29:54 China Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
