--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <img src="pb_in_red.jpg" alt="Bo Pang" width="250px" height="250px" />&nbsp;</td>
 <td align="left"><p>Ph.D. Candidate <br />
 <a href="https://engineering.nyu.edu/academics/departments/electrical-and-computer-engineering">Department of Electrical and Computer Engineering</a><br />
-<a href="https://www.nyu.edu/">New York University</a><br />
+<a href="https://www.nyu.edu/">New York University (NYU)</a><br />
 370 Jay street, Brooklyn, NY, USA<br />
 Email: <i>bo.pang</i> [@] <i>nyu</i> [DOT] <i>edu</i><br />
 Follow me on: <a href="https://scholar.google.com/citations?user=KqEVzM4AAAAJ&amp;hl=en&amp;oi=ao">Google Scholar</a>, <a href="https://www.zhihu.com/people/qiu-shui-20-54">Zhihu (知乎)</a></p>
@@ -60,7 +60,7 @@ Follow me on: <a href="https://scholar.google.com/citations?user=KqEVzM4AAAAJ&am
 <p><a href="https://info.flagcounter.com/vt4v"><img src="https://s05.flagcounter.com/count2/vt4v/bg_FFFFFF/txt_000000/border_CCCCCC/columns_8/maxflags_20/viewers_0/labels_1/pageviews_1/flags_0/percent_0/" alt="Flag Counter" border="0"></a></p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-06-27 00:07:31 China Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2020-06-29 19:38:35 China Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
