--- a/services.html
+++ b/services.html
@@ -30,20 +30,24 @@
 </li>
 </ul>
 <ul>
+<li><p>IEEE Conference on Decision and Control (CDC)</p>
+</li>
+</ul>
+<ul>
 <li><p>International Journal of Robust and Nonlinear Control</p>
+</li>
+</ul>
+<ul>
+<li><p>Neurocomputing</p>
 </li>
 </ul>
 <ul>
 <li><p>International Journal of Fuzzy Systems</p>
 </li>
 </ul>
-<ul>
-<li><p>IEEE Conference on Decision and Control (CDC)</p>
-</li>
-</ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-06-29 19:38:35 China Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2020-07-01 22:43:39 China Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
