--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@ Follow me on: <a href="https://scholar.google.com/citations?user=KqEVzM4AAAAJ&am
 <div class="infoblock">
 <div class="blockcontent">
 <ul>
+<li><p><b>July 16th</b> One paper on data-driven constrained LQR is accepted in CDC 2020.</p>
+</li>
 <li><p><b>June 19th</b> I successfully passed my Ph.D. Area Exam.</p>
 </li>
 <li><p><b>May 20th</b> One paper on policy iteration for LQR of linear periodic systems was <a href="https://www.sciencedirect.com/science/article/pii/S0005109820302338">online</a> in <a href="https://www.journals.elsevier.com/automatica">Automatica</a>.</p>
@@ -60,7 +62,7 @@ Follow me on: <a href="https://scholar.google.com/citations?user=KqEVzM4AAAAJ&am
 <p><a href="https://info.flagcounter.com/vt4v"><img src="https://s05.flagcounter.com/count2/vt4v/bg_FFFFFF/txt_000000/border_CCCCCC/columns_8/maxflags_20/viewers_0/labels_1/pageviews_1/flags_0/percent_0/" alt="Flag Counter" border="0"></a></p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-07-01 22:43:39 China Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2020-07-16 17:18:34 China Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
