--- a/publication.html
+++ b/publication.html
@@ -24,9 +24,6 @@
 <p><i>Robust Policy Iteration for Continuous-time Linear Quadratic Regulation.</i> [<a href="https://arxiv.org/abs/2005.09528">arXiv</a>]<br />
 <b>Bo Pang</b>, Tao Bian, Zhong-Ping Jiang.<br />
 IEEE Transactions on Automatic Control, Under Review</p>
-<p><i>A Data-driven Approach for Constrained Infinite-Horizon Linear Quadratic Regulation.</i> <br />
-<b>Bo Pang</b>, Zhong-Ping Jiang.<br />
-2019 IEEE 59th Conference on Decision and Control (CDC), Under Review</p>
 <h2>Journal Papers</h2>
 <p><i>Reinforcement Learning for Adaptive Control of Continuous-time Linear Periodic Systems.</i> [<a href="https://doi.org/10.1016/j.automatica.2020.109035">Link</a>]<br />
 <b>Bo Pang</b>, Zhong-Ping Jiang, Iven Mareels.<br />
@@ -47,6 +44,9 @@ International Journal of Fuzzy Systems, Vol. 19, No. 5, pp. 1392&ndash;1405, 201
 <b>Bo Pang</b>, Xiaocheng Liu, Qibing Jin, Weidong Zhang.<br />
 Neurocomputing, Vol. 205, pp. 210&ndash;221, 2016</p>
 <h2>Conference Papers</h2>
+<p><i>A Data-driven Approach for Constrained Infinite-Horizon Linear Quadratic Regulation.</i> <br />
+<b>Bo Pang</b>, Zhong-Ping Jiang.<br />
+2020 IEEE 59th Conference on Decision and Control (CDC), Jeju Island, Republic of Korea Under, Accepted.</p>
 <p><i>Reinforcement Learning for Adaptive Periodic Linear Quadratic Control.</i> [<a href="https://doi.org/10.1109/CDC40024.2019.9030252">Link</a>]<br />
 <b>Bo Pang</b>, Zhong-Ping Jiang, Iven Mareels.<br />
 2019 IEEE 58th Conference on Decision and Control (CDC), pp. 3322&ndash;3327, Nice, France.</p>
@@ -61,7 +61,7 @@ Yadong Zhao, <b>Bo Pang</b>, Fei Ye, Weidong Zhang.<br />
 2016 35th Chinese Control Conference (CCC), pp. 7598&ndash;7603, Chengdu, China.</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-07-01 22:43:39 China Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2020-07-16 17:18:34 China Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
