--- a/publication.html
+++ b/publication.html
@@ -46,7 +46,7 @@ Neurocomputing, Vol. 205, pp. 210&ndash;221, 2016</p>
 <h2>Conference Papers</h2>
 <p><i>A Data-driven Approach for Constrained Infinite-Horizon Linear Quadratic Regulation.</i> <br />
 <b>Bo Pang</b>, Zhong-Ping Jiang.<br />
-2020 IEEE 59th Conference on Decision and Control (CDC), Jeju Island, Republic of Korea Under, Accepted.</p>
+2020 IEEE 59th Conference on Decision and Control (CDC), Jeju Island, Republic of Korea, Accepted.</p>
 <p><i>Reinforcement Learning for Adaptive Periodic Linear Quadratic Control.</i> [<a href="https://doi.org/10.1109/CDC40024.2019.9030252">Link</a>]<br />
 <b>Bo Pang</b>, Zhong-Ping Jiang, Iven Mareels.<br />
 2019 IEEE 58th Conference on Decision and Control (CDC), pp. 3322&ndash;3327, Nice, France.</p>
@@ -61,7 +61,7 @@ Yadong Zhao, <b>Bo Pang</b>, Fei Ye, Weidong Zhang.<br />
 2016 35th Chinese Control Conference (CCC), pp. 7598&ndash;7603, Chengdu, China.</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-07-16 17:18:34 China Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2020-08-17 10:22:30 China Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
