--- a/services.html
+++ b/services.html
@@ -22,6 +22,10 @@
 </div>
 <p>Reviewer for</p>
 <ul>
+<li><p>Automatica</p>
+</li>
+</ul>
+<ul>
 <li><p>IEEE Transactions on Neural Networks and Learning Systems</p>
 </li>
 </ul>
@@ -47,7 +51,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-07-16 17:18:34 China Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2020-08-17 10:22:30 China Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
