link to journals

--- a/services.html
+++ b/services.html
@@ -22,15 +22,15 @@
 </div>
 <p>Reviewer for</p>
 <ul>
-<li><p>Automatica</p>
+<li><p><a href="https://www.journals.elsevier.com/automatica">Automatica</a></p>
 </li>
 </ul>
 <ul>
-<li><p>IEEE Transactions on Neural Networks and Learning Systems</p>
+<li><p><a href="https://cis.ieee.org/publications/t-neural-networks-and-learning-systems">IEEE Transactions on Neural Networks and Learning Systems</a></p>
 </li>
 </ul>
 <ul>
-<li><p>IEEE Transactions on Systems, Man, and Cybernetics: Systems</p>
+<li><p><a href="https://www.ieeesmc.org/publications/transactions-on-smc-systems">IEEE Transactions on Systems, Man, and Cybernetics: Systems</a></p>
 </li>
 </ul>
 <ul>
@@ -38,20 +38,20 @@
 </li>
 </ul>
 <ul>
-<li><p>International Journal of Robust and Nonlinear Control</p>
+<li><p><a href="https://onlinelibrary.wiley.com/journal/10991239">International Journal of Robust and Nonlinear Control</a></p>
 </li>
 </ul>
 <ul>
-<li><p>Neurocomputing</p>
+<li><p><a href="https://www.journals.elsevier.com/neurocomputing">Neurocomputing</a></p>
 </li>
 </ul>
 <ul>
-<li><p>International Journal of Fuzzy Systems</p>
+<li><p><a href="https://www.springer.com/journal/40815">International Journal of Fuzzy Systems</a></p>
 </li>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-08-27 10:44:54 China Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2020-10-09 00:26:40 China Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
