--- a/services.html
+++ b/services.html
@@ -34,7 +34,7 @@
 </li>
 </ul>
 <ul>
-<li><p>IEEE Conference on Decision and Control (CDC)</p>
+<li><p><a href="https://cdc2020.ieeecss.org/">IEEE Conference on Decision and Control (CDC) 2020</a></p>
 </li>
 </ul>
 <ul>
@@ -51,7 +51,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-10-09 00:26:40 China Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2020-10-09 11:35:00 China Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
