--- a/services.html
+++ b/services.html
@@ -49,9 +49,18 @@
 <li><p><a href="https://www.springer.com/journal/40815">International Journal of Fuzzy Systems</a></p>
 </li>
 </ul>
+<p>Teaching assistant for</p>
+<ul>
+<li><p>ECE-GY 6143, Introduction to Machine Learning, Graduate Level, Fall 2018, Instructor: <a href="https://engineering.nyu.edu/faculty/anna-choromanska">Prof. Anna Choromanska</a></p>
+</li>
+</ul>
+<ul>
+<li><p>ECE-UY 3064, Feedback Control, Undergraduate Level, Spring 2019, Instructor: <a href="https://engineering.nyu.edu/faculty/zhong-ping-jiang">Prof. Zhong-Ping Jiang</a></p>
+</li>
+</ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-10-09 11:35:00 China Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2020-10-20 00:46:18 China Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
