--- a/publication.html
+++ b/publication.html
@@ -21,6 +21,9 @@
 <h1>Publications</h1>
 </div>
 <h2>Papers in Preparation</h2>
+<p><i>Reinforcement Learning for Optimal Stationary Control of Linear Stochastic Systems.</i><br />
+<b>Bo Pang</b>, Zhong-Ping Jiang.<br />
+IEEE Transactions on Automatic Control, Under Review</p>
 <p><i>Robust Reinforcement Learning: A Case Study in Linear Quadratic Regulation.</i> [<a href="https://arxiv.org/abs/2008.11592">arXiv</a>]<br />
 <b>Bo Pang</b>, Zhong-Ping Jiang.<br /></p>
 <p><i>Robust Policy Iteration for Continuous-time Linear Quadratic Regulation.</i> [<a href="https://arxiv.org/abs/2005.09528">arXiv</a>]<br />
@@ -63,7 +66,7 @@ Yadong Zhao, <b>Bo Pang</b>, Fei Ye, Weidong Zhang.<br />
 2016 35th Chinese Control Conference (CCC), pp. 7598&ndash;7603, Chengdu, China.</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-10-20 00:46:18 China Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2020-10-28 14:04:17 China Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
