--- a/publication.html
+++ b/publication.html
@@ -28,7 +28,7 @@ IEEE Transactions on Automatic Control, Under Review</p>
 <b>Bo Pang</b>, Zhong-Ping Jiang.<br /></p>
 <p><i>Robust Policy Iteration for Continuous-time Linear Quadratic Regulation.</i> [<a href="https://arxiv.org/abs/2005.09528">arXiv</a>]<br />
 <b>Bo Pang</b>, Tao Bian, Zhong-Ping Jiang.<br />
-IEEE Transactions on Automatic Control, Under Review</p>
+IEEE Transactions on Automatic Control, Major Revision</p>
 <h2>Journal Papers</h2>
 <p><i>Reinforcement Learning for Adaptive Control of Continuous-time Linear Periodic Systems.</i> [<a href="https://doi.org/10.1016/j.automatica.2020.109035">Link</a>]<br />
 <b>Bo Pang</b>, Zhong-Ping Jiang, Iven Mareels.<br />
@@ -66,7 +66,7 @@ Yadong Zhao, <b>Bo Pang</b>, Fei Ye, Weidong Zhang.<br />
 2016 35th Chinese Control Conference (CCC), pp. 7598&ndash;7603, Chengdu, China.</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-10-28 14:04:17 China Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2020-10-31 09:08:59 China Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
