--- a/publication.html
+++ b/publication.html
@@ -24,8 +24,6 @@
 <p><i>Reinforcement Learning for Optimal Stationary Control of Linear Stochastic Systems.</i><br />
 <b>Bo Pang</b>, Zhong-Ping Jiang.<br />
 IEEE Transactions on Automatic Control, Under Review</p>
-<p><i>Robust Reinforcement Learning: A Case Study in Linear Quadratic Regulation.</i> [<a href="https://arxiv.org/abs/2008.11592">arXiv</a>]<br />
-<b>Bo Pang</b>, Zhong-Ping Jiang.<br /></p>
 <p><i>Robust Policy Iteration for Continuous-time Linear Quadratic Regulation.</i> [<a href="https://arxiv.org/abs/2005.09528">arXiv</a>]<br />
 <b>Bo Pang</b>, Tao Bian, Zhong-Ping Jiang.<br />
 IEEE Transactions on Automatic Control, Major Revision</p>
@@ -49,24 +47,27 @@ International Journal of Fuzzy Systems, Vol. 19, No. 5, pp. 1392&ndash;1405, 201
 <b>Bo Pang</b>, Xiaocheng Liu, Qibing Jin, Weidong Zhang.<br />
 Neurocomputing, Vol. 205, pp. 210&ndash;221, 2016</p>
 <h2>Conference Papers</h2>
+<p><i>Robust Reinforcement Learning: A Case Study in Linear Quadratic Regulation.</i> [<a href="https://arxiv.org/abs/2008.11592">arXiv</a>]<br />
+<b>Bo Pang</b>, Zhong-Ping Jiang.<br />
+2021 35th AAAI Conference on Artificial Intelligence (AAAI2021), Accepted.</p>
 <p><i>A Data-driven Approach for Constrained Infinite-Horizon Linear Quadratic Regulation.</i> <br />
 <b>Bo Pang</b>, Zhong-Ping Jiang.<br />
-2020 IEEE 59th Conference on Decision and Control (CDC), Jeju Island, Republic of Korea, Accepted.</p>
+2020 IEEE 59th Conference on Decision and Control (CDC2020), Jeju Island, Republic of Korea, Accepted.</p>
 <p><i>Reinforcement Learning for Adaptive Periodic Linear Quadratic Control.</i> [<a href="https://doi.org/10.1109/CDC40024.2019.9030252">Link</a>]<br />
 <b>Bo Pang</b>, Zhong-Ping Jiang, Iven Mareels.<br />
-2019 IEEE 58th Conference on Decision and Control (CDC), pp. 3322&ndash;3327, Nice, France.</p>
+2019 IEEE 58th Conference on Decision and Control (CDC2019), pp. 3322&ndash;3327, Nice, France.</p>
 <p><i>Data-driven Finite-horizon Optimal Control for Linear Time-varying Discrete-time Systems.</i> [<a href="https://doi.org/10.1109/CDC.2018.8619347">Link</a>]<br />
 <b>Bo Pang</b>, Tao Bian, Zhong-Ping Jiang.<br />
-2018 IEEE 57th Conference on Decision and Control (CDC), pp. 861&ndash;866, Miami Beach, FL, USA.</p>
+2018 IEEE 57th Conference on Decision and Control (CDC2018), pp. 861&ndash;866, Miami Beach, FL, USA.</p>
 <p><i>Output Tracking of Boiler-turbine System by Fuzzy Guaranteed Cost Control.</i> [<a href="https://doi.org/10.1109/ChiCC.2016.7553933">Link</a>]<br />
 <b>Bo Pang</b>, Yadong Zhao, Bowen Yi, Liyue Chen, Weidong Zhang.<br />
-2016 35th Chinese Control Conference (CCC), pp. 3721&ndash;3726, Chengdu, China.</p>
+2016 35th Chinese Control Conference (CCC2016), pp. 3721&ndash;3726, Chengdu, China.</p>
 <p><i>Finite-time Distributed Observers for Position and Velocity Estimation in Vehicle Formations.</i> [<a href="https://doi.org/10.1109/ChiCC.2016.7554561">Link</a>]<br />
 Yadong Zhao, <b>Bo Pang</b>, Fei Ye, Weidong Zhang.<br />
-2016 35th Chinese Control Conference (CCC), pp. 7598&ndash;7603, Chengdu, China.</p>
+2016 35th Chinese Control Conference (CCC2016), pp. 7598&ndash;7603, Chengdu, China.</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-10-31 09:08:59 China Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2020-12-03 14:28:47 China Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
