--- a/index.html
+++ b/index.html
@@ -45,13 +45,11 @@ Follow me on: <a href="https://scholar.google.com/citations?user=KqEVzM4AAAAJ&am
 <div class="infoblock">
 <div class="blockcontent">
 <ul>
+<li><p><b>December 3rd</b> Our paper on robustness analysis of reinforcement learning is accepted by AAAI 2021.</p>
+</li>
 <li><p><b>July 16th</b> One paper on data-driven constrained LQR is accepted in CDC 2020.</p>
 </li>
 <li><p><b>June 19th</b> I successfully passed my Ph.D. Area Exam.</p>
-</li>
-<li><p><b>May 20th</b> One paper on policy iteration for LQR of linear periodic systems was <a href="https://www.sciencedirect.com/science/article/pii/S0005109820302338">online</a> in <a href="https://www.journals.elsevier.com/automatica">Automatica</a>.</p>
-</li>
-<li><p><b>May 19th</b> Our <a href="https://arxiv.org/abs/2005.09528">paper</a> on robust analysis of policy iteration for LQR was submitted to <a href="http://ieeecss.org/publication/transactions-automatic-control">IEEE transactions on Automatic Control</a>.</p>
 </li>
 </ul>
 </div></div>
@@ -60,7 +58,7 @@ Follow me on: <a href="https://scholar.google.com/citations?user=KqEVzM4AAAAJ&am
 <p><a href="https://info.flagcounter.com/vt4v"><img src="https://s05.flagcounter.com/count2/vt4v/bg_FFFFFF/txt_000000/border_CCCCCC/columns_8/maxflags_20/viewers_0/labels_1/pageviews_1/flags_0/percent_0/" alt="Flag Counter" border="0"></a></p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-10-31 09:08:59 China Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2020-12-03 14:28:47 China Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
