--- a/publication.html
+++ b/publication.html
@@ -50,9 +50,9 @@ Neurocomputing, Vol. 205, pp. 210&ndash;221, 2016</p>
 <p><i>Robust Reinforcement Learning: A Case Study in Linear Quadratic Regulation.</i> [<a href="https://arxiv.org/abs/2008.11592">arXiv</a>]<br />
 <b>Bo Pang</b>, Zhong-Ping Jiang.<br />
 2021 35th AAAI Conference on Artificial Intelligence (AAAI2021), Accepted.</p>
-<p><i>A Data-driven Approach for Constrained Infinite-Horizon Linear Quadratic Regulation.</i> <br />
+<p><i>A Data-driven Approach for Constrained Infinite-Horizon Linear Quadratic Regulation.</i> [<a href="https://doi.org/10.1109/CDC42340.2020.9304046">Link</a>]<br />
 <b>Bo Pang</b>, Zhong-Ping Jiang.<br />
-2020 IEEE 59th Conference on Decision and Control (CDC2020), Jeju Island, Republic of Korea, Accepted.</p>
+2020 IEEE 59th Conference on Decision and Control (CDC2020), pp. 6010-6015, Jeju Island, Republic of Korea.</p>
 <p><i>Reinforcement Learning for Adaptive Periodic Linear Quadratic Control.</i> [<a href="https://doi.org/10.1109/CDC40024.2019.9030252">Link</a>]<br />
 <b>Bo Pang</b>, Zhong-Ping Jiang, Iven Mareels.<br />
 2019 IEEE 58th Conference on Decision and Control (CDC2019), pp. 3322&ndash;3327, Nice, France.</p>
@@ -67,7 +67,7 @@ Yadong Zhao, <b>Bo Pang</b>, Fei Ye, Weidong Zhang.<br />
 2016 35th Chinese Control Conference (CCC2016), pp. 7598&ndash;7603, Chengdu, China.</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-12-03 14:28:47 China Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2021-01-16 12:45:21 China Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
