--- a/services.html
+++ b/services.html
@@ -58,9 +58,13 @@
 <li><p>ECE-UY 3064, Feedback Control, Undergraduate Level, Spring 2019, Instructor: <a href="https://engineering.nyu.edu/faculty/zhong-ping-jiang">Prof. Zhong-Ping Jiang</a></p>
 </li>
 </ul>
+<ul>
+<li><p>ECE-GY 6233, System Optimization Method, Graduate Level, Spring 2021, Instructor: <a href="https://engineering.nyu.edu/faculty/zhong-ping-jiang">Prof. Zhong-Ping Jiang</a></p>
+</li>
+</ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-01-16 12:45:21 China Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2021-01-26 00:24:48 China Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
