--- a/publication.html
+++ b/publication.html
@@ -28,12 +28,12 @@ IEEE Transactions on Automatic Control, Under Review</p>
 <b>Bo Pang</b>, Tao Bian, Zhong-Ping Jiang.<br />
 IEEE Transactions on Automatic Control, Major Revision</p>
 <h2>Journal Papers</h2>
+<p><i>Adaptive Optimal Control of Linear Periodic Systems: An Off-Policy Value Iteration Approach.</i> [<a href="https://doi.org/10.1109/TAC.2020.2987313">Link</a>]<br />
+<b>Bo Pang</b>, Zhong-Ping Jiang.<br />
+IEEE Transactions on Automatic Control, Vol. 66, No. 2, pp. 888&ndash;894, 2020</p>
 <p><i>Reinforcement Learning for Adaptive Control of Continuous-time Linear Periodic Systems.</i> [<a href="https://doi.org/10.1016/j.automatica.2020.109035">Link</a>]<br />
 <b>Bo Pang</b>, Zhong-Ping Jiang, Iven Mareels.<br />
 Automatica, Vol. 118, 2020</p>
-<p><i>Adaptive Optimal Control of Linear Periodic Systems: An Off-Policy Value Iteration Approach.</i> [<a href="https://doi.org/10.1109/TAC.2020.2987313">Link</a>]<br />
-<b>Bo Pang</b>, Zhong-Ping Jiang.<br />
-IEEE Transactions on Automatic Control, Early Access, 2020</p>
 <p><i>Adaptive Dynamic Programming for Finite-horizon Optimal Control of Linear Time-varying Discrete-time Systems.</i> [<a href="https://doi.org/10.1007/s11768-019-8168-8">Link</a>]<br />
 <b>Bo Pang</b>, Tao Bian, Zhong-Ping Jiang.<br />
 Control Theory and Technology, Vol. 17, No. 1, pp. 73&ndash;84, 2019</p>
@@ -67,7 +67,7 @@ Yadong Zhao, <b>Bo Pang</b>, Fei Ye, Weidong Zhang.<br />
 2016 35th Chinese Control Conference (CCC2016), pp. 7598&ndash;7603, Chengdu, China.</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-01-26 00:24:48 China Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2021-01-29 12:49:51 China Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
