--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ Email: <i>bo.pang</i> [@] <i>nyu</i> [DOT] <i>edu</i><br />
 Follow me on: <a href="https://scholar.google.com/citations?user=KqEVzM4AAAAJ&amp;hl=en&amp;oi=ao">Google Scholar</a>, <a href="https://www.zhihu.com/people/qiu-shui-20-54">Zhihu (知乎)</a></p>
 </td></tr></table>
 <h2>About me</h2>
-<p>I am a Ph.D. candidate at <a href="https://www.nyu.edu/">New York University</a>, working with my supervisor <a href="https://engineering.nyu.edu/faculty/zhong-ping-jiang">Prof. Zhong-ping Jiang</a>. I received my Master's degree in Automation from <a href="http://en.sjtu.edu.cn/">Shanghai Jiao Tong University</a>, Shanghai, China, where I was advised by <a href="http://www.automation.sjtu.edu.cn/wdzhang/">Prof. Weidong Zhang</a>. Before that, I received my B.S. degree in Automation from <a href="https://ev.buaa.edu.cn/">Beihang University</a>.</p>
+<p>I am a Ph.D. candidate at <a href="https://www.nyu.edu/">New York University</a>, working with my supervisor <a href="https://engineering.nyu.edu/faculty/zhong-ping-jiang">Prof. Zhong-Ping Jiang</a>. I received my Master's degree in Automation from <a href="http://en.sjtu.edu.cn/">Shanghai Jiao Tong University</a>, Shanghai, China, where I was advised by <a href="http://www.automation.sjtu.edu.cn/wdzhang/">Prof. Weidong Zhang</a>. Before that, I received my B.S. degree in Automation from <a href="https://ev.buaa.edu.cn/">Beihang University</a>, Beijing, China.</p>
 <p>My research focuses on decision making under uncertainty, includes but not limited to reinforcement learning, adaptive/approximate dynamic programming, optimal control, stochastic control, model predictive control.</p>
 <h2>Education</h2>
 <ul>
@@ -45,11 +45,11 @@ Follow me on: <a href="https://scholar.google.com/citations?user=KqEVzM4AAAAJ&am
 <div class="infoblock">
 <div class="blockcontent">
 <ul>
-<li><p><b>December 3rd</b> Our paper on robustness analysis of reinforcement learning is accepted by AAAI 2021.</p>
+<li><p><b>February 19th 2021</b> I gave an online one-hour talk to the group of Prof. <a href="https://www.georgejpappas.org/">George J. Pappas</a> in University of Pennsylvania, on my work about robust reinforcement learning.</p>
 </li>
-<li><p><b>July 16th</b> One paper on data-driven constrained LQR is accepted in CDC 2020.</p>
+<li><p><b>December 3rd 2020</b> Our paper on robustness analysis of reinforcement learning is accepted by AAAI 2021.</p>
 </li>
-<li><p><b>June 19th</b> I successfully passed my Ph.D. Area Exam.</p>
+<li><p><b>July 16th 2020</b> One paper on data-driven constrained LQR is accepted in CDC 2020.</p>
 </li>
 </ul>
 </div></div>
@@ -58,7 +58,7 @@ Follow me on: <a href="https://scholar.google.com/citations?user=KqEVzM4AAAAJ&am
 <p><a href="https://info.flagcounter.com/vt4v"><img src="https://s05.flagcounter.com/count2/vt4v/bg_FFFFFF/txt_000000/border_CCCCCC/columns_8/maxflags_20/viewers_0/labels_1/pageviews_1/flags_0/percent_0/" alt="Flag Counter" border="0"></a></p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-02-08 00:36:19 China Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2021-02-20 05:26:52 China Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
