--- a/publication.html
+++ b/publication.html
@@ -26,7 +26,7 @@
 IEEE Transactions on Automatic Control, Under Review</p>
 <p><i>Robust Policy Iteration for Continuous-time Linear Quadratic Regulation.</i> [<a href="https://arxiv.org/abs/2005.09528">arXiv</a>]<br />
 <b>Bo Pang</b>, Tao Bian, Zhong-Ping Jiang.<br />
-IEEE Transactions on Automatic Control, Major Revision</p>
+IEEE Transactions on Automatic Control, Under Review</p>
 <h2>Journal Papers</h2>
 <p><i>Adaptive Optimal Control of Linear Periodic Systems: An Off-Policy Value Iteration Approach.</i> [<a href="https://doi.org/10.1109/TAC.2020.2987313">Link</a>]<br />
 <b>Bo Pang</b>, Zhong-Ping Jiang.<br />
@@ -67,7 +67,7 @@ Yadong Zhao, <b>Bo Pang</b>, Fei Ye, Weidong Zhang.<br />
 2016 35th Chinese Control Conference (CCC2016), pp. 7598&ndash;7603, Chengdu, China.</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-02-08 00:36:19 China Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2021-02-20 05:26:52 China Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
