book chapter added

--- a/publication.html
+++ b/publication.html
@@ -21,6 +21,9 @@
 <h1>Publications</h1>
 </div>
 <h2>Papers in Preparation</h2>
+<p><i>Robust Reinforcement Learning for Stochastic Linear Quadratic Control with Multiplicative Noise.</i><br />
+<b>Bo Pang</b>, Zhong-Ping Jiang.<br />
+Book Chapter, 2021 to appear</p>
 <p><i>Reinforcement Learning for Optimal Stationary Control of Linear Stochastic Systems.</i><br />
 <b>Bo Pang</b>, Zhong-Ping Jiang.<br />
 IEEE Transactions on Automatic Control, Under Review</p>
@@ -67,7 +70,7 @@ Yadong Zhao, <b>Bo Pang</b>, Fei Ye, Weidong Zhang.<br />
 2016 35th Chinese Control Conference (CCC2016), pp. 7598&ndash;7603, Chengdu, China.</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-02-20 05:26:52 China Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2021-03-09 16:18:11 China Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
