--- a/publication.html
+++ b/publication.html
@@ -30,6 +30,12 @@ IEEE Transactions on Automatic Control, Under Review</p>
 <p><i>Robust Policy Iteration for Continuous-time Linear Quadratic Regulation.</i> [<a href="https://arxiv.org/abs/2005.09528">arXiv</a>]<br />
 <b>Bo Pang</b>, Tao Bian, Zhong-Ping Jiang.<br />
 IEEE Transactions on Automatic Control, Under Review</p>
+<p><i>Data-Driven Adaptive Optimal Control of Mixed-Traffic Connected Vehicles in a Ring Road.</i><br />
+Tong Liu, Leilei Cui, <b>Bo Pang</b>, Zhong-Ping Jiang.<br />
+2021 IEEE 60th Conference on Decision and Control (CDC2021), Under Review.</p>
+<p><i>Learning-Based Control of Multiple Connected Vehicles in the Mixed Traffic by Adaptive Dynamic Programming.</i><br />
+Tong Liu, Leilei Cui, <b>Bo Pang</b>, Zhong-Ping Jiang.<br />
+The 3rd IFAC Conference on Modelling, Identification and Control of Nonlinear Systems (MICNON 2021), Under Review.</p>
 <h2>Journal Papers</h2>
 <p><i>Adaptive Optimal Control of Linear Periodic Systems: An Off-Policy Value Iteration Approach.</i> [<a href="https://doi.org/10.1109/TAC.2020.2987313">Link</a>]<br />
 <b>Bo Pang</b>, Zhong-Ping Jiang.<br />
@@ -70,7 +76,7 @@ Yadong Zhao, <b>Bo Pang</b>, Fei Ye, Weidong Zhang.<br />
 2016 35th Chinese Control Conference (CCC2016), pp. 7598&ndash;7603, Chengdu, China.</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-03-09 16:18:11 China Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2021-04-10 16:48:00 China Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
