--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@ Follow me on: <a href="https://scholar.google.com/citations?user=KqEVzM4AAAAJ&am
 <div class="infoblock">
 <div class="blockcontent">
 <ul>
-<li><p><b>February 19th 2021</b> I gave an online one-hour talk to the group of Prof. <a href="https://www.georgejpappas.org/">George J. Pappas</a> in University of Pennsylvania, on my work about robust reinforcement learning.</p>
+<li><p><b>Apr. 23rd 2021</b> I succesfully defended my dissertation!</p>
 </li>
-<li><p><b>December 3rd 2020</b> Our paper on robustness analysis of reinforcement learning is accepted by AAAI 2021.</p>
+<li><p><b>Feb. 19th 2021</b> I gave an online one-hour talk to the group of Prof. <a href="https://www.georgejpappas.org/">George J. Pappas</a> in University of Pennsylvania, on my work about robust reinforcement learning.</p>
 </li>
-<li><p><b>July 16th 2020</b> One paper on data-driven constrained LQR is accepted in CDC 2020.</p>
+<li><p><b>Dec. 3rd 2020</b> Our paper on robustness analysis of reinforcement learning is accepted by AAAI 2021.</p>
 </li>
 </ul>
 </div></div>
@@ -58,7 +58,7 @@ Follow me on: <a href="https://scholar.google.com/citations?user=KqEVzM4AAAAJ&am
 <p><a href="https://info.flagcounter.com/vt4v"><img src="https://s05.flagcounter.com/count2/vt4v/bg_FFFFFF/txt_000000/border_CCCCCC/columns_8/maxflags_20/viewers_0/labels_1/pageviews_1/flags_0/percent_0/" alt="Flag Counter" border="0"></a></p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-04-10 16:48:00 China Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2021-05-05 14:49:11 China Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
