--- a/publication.html
+++ b/publication.html
@@ -20,7 +20,7 @@
 <div id="toptitle">
 <h1>Publications</h1>
 </div>
-<h2>Papers in Preparation</h2>
+<h2>Papers Submitted</h2>
 <p><i>Robust Reinforcement Learning for Stochastic Linear Quadratic Control with Multiplicative Noise.</i><br />
 <b>Bo Pang</b>, Zhong-Ping Jiang.<br />
 Book Chapter, 2021 to appear</p>
@@ -76,7 +76,7 @@ Yadong Zhao, <b>Bo Pang</b>, Fei Ye, Weidong Zhang.<br />
 2016 35th Chinese Control Conference (CCC2016), pp. 7598&ndash;7603, Chengdu, China.</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-04-10 16:48:00 China Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2021-05-05 14:49:11 China Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
