--- a/publication.html
+++ b/publication.html
@@ -21,14 +21,8 @@
 <h1>Publications</h1>
 </div>
 <h2>Papers Submitted</h2>
-<p><i>Robust Reinforcement Learning for Stochastic Linear Quadratic Control with Multiplicative Noise.</i><br />
-<b>Bo Pang</b>, Zhong-Ping Jiang.<br />
-Book Chapter, 2021 to appear</p>
 <p><i>Reinforcement Learning for Optimal Stationary Control of Linear Stochastic Systems.</i><br />
 <b>Bo Pang</b>, Zhong-Ping Jiang.<br />
-IEEE Transactions on Automatic Control, Under Review</p>
-<p><i>Robust Policy Iteration for Continuous-time Linear Quadratic Regulation.</i> [<a href="https://arxiv.org/abs/2005.09528">arXiv</a>]<br />
-<b>Bo Pang</b>, Tao Bian, Zhong-Ping Jiang.<br />
 IEEE Transactions on Automatic Control, Under Review</p>
 <p><i>Data-Driven Adaptive Optimal Control of Mixed-Traffic Connected Vehicles in a Ring Road.</i><br />
 Tong Liu, Leilei Cui, <b>Bo Pang</b>, Zhong-Ping Jiang.<br />
@@ -36,7 +30,14 @@ Tong Liu, Leilei Cui, <b>Bo Pang</b>, Zhong-Ping Jiang.<br />
 <p><i>Learning-Based Control of Multiple Connected Vehicles in the Mixed Traffic by Adaptive Dynamic Programming.</i><br />
 Tong Liu, Leilei Cui, <b>Bo Pang</b>, Zhong-Ping Jiang.<br />
 The 3rd IFAC Conference on Modelling, Identification and Control of Nonlinear Systems (MICNON 2021), Under Review.</p>
+<h2>Book Chapters</h2>
+<p><i>Robust Reinforcement Learning for Stochastic Linear Quadratic Control with Multiplicative Noise.</i> [<a href="https://www.springer.com/gp/book/9783030746278">Link</a>]<br />
+<b>Bo Pang</b>, Zhong-Ping Jiang.<br />
+Book chapter in Trends in Nonlinear and Adaptive Control: A Tribute to Laurent Praly for his 65th Birthday, Springer, 2021.</p>
 <h2>Journal Papers</h2>
+<p><i>Robust Policy Iteration for Continuous-time Linear Quadratic Regulation.</i> [<a href="https://arxiv.org/abs/2005.09528">arXiv</a>]<br />
+<b>Bo Pang</b>, Tao Bian, Zhong-Ping Jiang.<br />
+IEEE Transactions on Automatic Control, Accepted.</p>
 <p><i>Adaptive Optimal Control of Linear Periodic Systems: An Off-Policy Value Iteration Approach.</i> [<a href="https://doi.org/10.1109/TAC.2020.2987313">Link</a>]<br />
 <b>Bo Pang</b>, Zhong-Ping Jiang.<br />
 IEEE Transactions on Automatic Control, Vol. 66, No. 2, pp. 888&ndash;894, 2021</p>
@@ -76,7 +77,7 @@ Yadong Zhao, <b>Bo Pang</b>, Fei Ye, Weidong Zhang.<br />
 2016 35th Chinese Control Conference (CCC2016), pp. 7598&ndash;7603, Chengdu, China.</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-05-05 14:49:11 China Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2021-05-17 15:36:32 China Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
