--- a/publication.html
+++ b/publication.html
@@ -33,7 +33,7 @@ The 3rd IFAC Conference on Modelling, Identification and Control of Nonlinear Sy
 <h2>Book Chapters</h2>
 <p><i>Robust Reinforcement Learning for Stochastic Linear Quadratic Control with Multiplicative Noise.</i> [<a href="https://www.springer.com/gp/book/9783030746278">Link</a>]<br />
 <b>Bo Pang</b>, Zhong-Ping Jiang.<br />
-Book chapter in Trends in Nonlinear and Adaptive Control: A Tribute to Laurent Praly for his 65th Birthday, Springer, 2021.</p>
+Book chapter in Trends in Nonlinear and Adaptive Control: A Tribute to <a href="https://cas.mines-paristech.fr/~praly/">Laurent Praly</a> for his 65th Birthday, Springer, 2021.</p>
 <h2>Journal Papers</h2>
 <p><i>Robust Policy Iteration for Continuous-time Linear Quadratic Regulation.</i> [<a href="https://arxiv.org/abs/2005.09528">arXiv</a>]<br />
 <b>Bo Pang</b>, Tao Bian, Zhong-Ping Jiang.<br />
@@ -77,7 +77,7 @@ Yadong Zhao, <b>Bo Pang</b>, Fei Ye, Weidong Zhang.<br />
 2016 35th Chinese Control Conference (CCC2016), pp. 7598&ndash;7603, Chengdu, China.</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-05-17 15:50:59 China Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2021-05-25 11:20:58 China Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
