--- a/publication.html
+++ b/publication.html
@@ -59,7 +59,7 @@ Neurocomputing, Vol. 205, pp. 210&ndash;221, 2016</p>
 <h2>Conference Papers</h2>
 <p><i>Robust Reinforcement Learning: A Case Study in Linear Quadratic Regulation.</i> [<a href="https://arxiv.org/abs/2008.11592">arXiv</a>]<br />
 <b>Bo Pang</b>, Zhong-Ping Jiang.<br />
-2021 35th AAAI Conference on Artificial Intelligence (AAAI2021), Accepted.</p>
+2021 35th AAAI Conference on Artificial Intelligence (AAAI2021), pp. 9303-9311, A Virtual Conference.</p>
 <p><i>A Data-driven Approach for Constrained Infinite-Horizon Linear Quadratic Regulation.</i> [<a href="https://doi.org/10.1109/CDC42340.2020.9304046">Link</a>]<br />
 <b>Bo Pang</b>, Zhong-Ping Jiang.<br />
 2020 IEEE 59th Conference on Decision and Control (CDC2020), pp. 6010-6015, Jeju Island, Republic of Korea.</p>
@@ -77,7 +77,7 @@ Yadong Zhao, <b>Bo Pang</b>, Fei Ye, Weidong Zhang.<br />
 2016 35th Chinese Control Conference (CCC2016), pp. 7598&ndash;7603, Chengdu, China.</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-05-25 11:20:58 China Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2021-06-02 23:56:09 China Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
