--- a/publication.html
+++ b/publication.html
@@ -35,9 +35,9 @@ The 3rd IFAC Conference on Modelling, Identification and Control of Nonlinear Sy
 <b>Bo Pang</b>, Zhong-Ping Jiang.<br />
 Book chapter in Trends in Nonlinear and Adaptive Control: A Tribute to <a href="https://cas.mines-paristech.fr/~praly/">Laurent Praly</a> for his 65th Birthday, Springer, 2021.</p>
 <h2>Journal Papers</h2>
-<p><i>Robust Policy Iteration for Continuous-time Linear Quadratic Regulation.</i> [<a href="https://arxiv.org/abs/2005.09528">arXiv</a>]<br />
+<p><i>Robust Policy Iteration for Continuous-time Linear Quadratic Regulation.</i> [<a href="https://ieeexplore.ieee.org/document/9444823">Link</a>]<br />
 <b>Bo Pang</b>, Tao Bian, Zhong-Ping Jiang.<br />
-IEEE Transactions on Automatic Control, Accepted, 2021.</p>
+IEEE Transactions on Automatic Control, Early Access, 2021.</p>
 <p><i>Adaptive Optimal Control of Linear Periodic Systems: An Off-Policy Value Iteration Approach.</i> [<a href="https://doi.org/10.1109/TAC.2020.2987313">Link</a>]<br />
 <b>Bo Pang</b>, Zhong-Ping Jiang.<br />
 IEEE Transactions on Automatic Control, Vol. 66, No. 2, pp. 888&ndash;894, 2021</p>
@@ -77,7 +77,7 @@ Yadong Zhao, <b>Bo Pang</b>, Fei Ye, Weidong Zhang.<br />
 2016 35th Chinese Control Conference (CCC2016), pp. 7598&ndash;7603, Chengdu, China.</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-06-02 23:56:09 China Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2021-06-03 09:58:14 China Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
