--- a/publication.html
+++ b/publication.html
@@ -27,9 +27,6 @@ IEEE Transactions on Automatic Control, Under Review</p>
 <p><i>Data-Driven Adaptive Optimal Control of Mixed-Traffic Connected Vehicles in a Ring Road.</i><br />
 Tong Liu, Leilei Cui, <b>Bo Pang</b>, Zhong-Ping Jiang.<br />
 2021 IEEE 60th Conference on Decision and Control (CDC2021), Under Review.</p>
-<p><i>Learning-Based Control of Multiple Connected Vehicles in the Mixed Traffic by Adaptive Dynamic Programming.</i><br />
-Tong Liu, Leilei Cui, <b>Bo Pang</b>, Zhong-Ping Jiang.<br />
-The 3rd IFAC Conference on Modelling, Identification and Control of Nonlinear Systems (MICNON 2021), Under Review.</p>
 <h2>Book Chapters</h2>
 <p><i>Robust Reinforcement Learning for Stochastic Linear Quadratic Control with Multiplicative Noise.</i> [<a href="https://www.springer.com/gp/book/9783030746278">Link</a>]<br />
 <b>Bo Pang</b>, Zhong-Ping Jiang.<br />
@@ -57,6 +54,9 @@ International Journal of Fuzzy Systems, Vol. 19, No. 5, pp. 1392&ndash;1405, 201
 <b>Bo Pang</b>, Xiaocheng Liu, Qibing Jin, Weidong Zhang.<br />
 Neurocomputing, Vol. 205, pp. 210&ndash;221, 2016</p>
 <h2>Conference Papers</h2>
+<p><i>Learning-Based Control of Multiple Connected Vehicles in the Mixed Traffic by Adaptive Dynamic Programming.</i><br />
+Tong Liu, Leilei Cui, <b>Bo Pang</b>, Zhong-Ping Jiang.<br />
+2021 3rd IFAC Conference on Modelling, Identification and Control of Nonlinear Systems (MICNON2021), Accepted.</p>
 <p><i>Robust Reinforcement Learning: A Case Study in Linear Quadratic Regulation.</i> [<a href="https://arxiv.org/abs/2008.11592">arXiv</a>]<br />
 <b>Bo Pang</b>, Zhong-Ping Jiang.<br />
 2021 35th AAAI Conference on Artificial Intelligence (AAAI2021), pp. 9303-9311, A Virtual Conference.</p>
@@ -77,7 +77,7 @@ Yadong Zhao, <b>Bo Pang</b>, Fei Ye, Weidong Zhang.<br />
 2016 35th Chinese Control Conference (CCC2016), pp. 7598&ndash;7603, Chengdu, China.</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-06-03 09:58:14 China Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2021-06-05 15:33:18 China Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
