--- a/publication.html
+++ b/publication.html
@@ -21,6 +21,9 @@
 <h1>Publications</h1>
 </div>
 <h2>Papers Submitted</h2>
+<p><i>Human Motor Learning is Robust to Control-Dependent Noise.</i><br />
+<b>Bo Pang</b>, Leilei Cui and Zhong-Ping Jiang.<br />
+Biological Cybernetics, Under Review.</p>
 <p><i>Reinforcement Learning for Optimal Stationary Control of Linear Stochastic Systems.</i><br />
 <b>Bo Pang</b>, Zhong-Ping Jiang.<br />
 IEEE Transactions on Automatic Control, Under Review</p>
@@ -77,7 +80,7 @@ Yadong Zhao, <b>Bo Pang</b>, Fei Ye, Weidong Zhang.<br />
 2016 35th Chinese Control Conference (CCC2016), pp. 7598&ndash;7603, Chengdu, China.</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-06-05 15:33:18 China Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2021-07-13 13:37:31 China Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
